--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ actix-web = "3.0"
 actix-files = "0.4.0"
 actix-identity = "0.3.1"
 actix-session = "0.4.0"
+actix-service = "*"
+futures = "*"
 actix-http = "2.0.0"
 pretty_env_logger = "0.4.0"
 log = "0.4.11"
