cleaned up challenge bodies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ actix-session = "0.4.0"
 actix-service = "*"
 futures = "*"
 actix-http = "2.0.0"
+dotenv = "0.15.0"
 pretty_env_logger = "0.4.0"
 log = "0.4.11"
 serde = "1.0.114"
