--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ actix-service = "*"
 futures = "*"
 actix-http = "2.0.0"
 dotenv = "0.15.0"
+actix-cors = "0.5"
 pretty_env_logger = "0.4.0"
 log = "0.4.11"
 serde = "1.0.114"
